fixed spacing between navbar header and table

--- a/application/src/Components/Presentation/Inventory/Inventory.css
+++ b/application/src/Components/Presentation/Inventory/Inventory.css
@@ -3,6 +3,7 @@
     background-color: white;
     padding: 10px;
     padding-top: 20px;
+    margin-top: 3vw;
     border-radius: 15px;
 }
 
