--- a/application/src/Components/Presentation/Navigation/Navigation.css
+++ b/application/src/Components/Presentation/Navigation/Navigation.css
@@ -3,14 +3,12 @@
 }
 
 .navBar{
-    top: 50px;
-		position: relative;
-		text-align: center;
+    text-align: center;
 }
 
 .navRow{
-	height:150px;
-	margin-bottom: 20px;
+	height:75px;
+    margin-bottom: 2vw;
 }
 
 .icon{
