--- a/application/src/Components/Presentation/Shopping/Shopping.css
+++ b/application/src/Components/Presentation/Shopping/Shopping.css
@@ -4,6 +4,7 @@
     padding: 10px;
     padding-top: 20px;
     border-radius: 15px;
+    margin-top: 3vw;
 }
 
 .itemBtn{
